--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,23 +1,51 @@
 // Home Content
 
 .home {
+  .hidden {
+    display: none;
+  }
 
   .intro {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
 
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
+
   }
 
   .space-images {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+
+    @media @phone {
+      .space-images {
+        .mobile-align(column, center, center);
+      }
+
+      .sky {
+        display: none;
+      }
+
+      .launch {
+        display: none;
+      }
+
+      .blast {
+        width: 100%;
+      }
+    }
 
     img {
       width: 28%;
@@ -58,13 +86,24 @@
       }
 
       .btn {
+        .button(@ebony-clay, #fff, center);
+        width: 80px;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        padding: 5px;
+        border-radius: 5px;
+
+        &:hover {
+          .button(#fff, @ebony-clay, center);
+          transition: 0.2s ease-in-out;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
@@ -72,4 +111,59 @@
       }
     }
   }
-}// home
+
+  .hidden {
+    @media @phone {
+      display: flex;
+      .mobile-align(column, center, center);
+      margin-top: 60px;
+      border-top: 1px solid @main-border-color;
+      padding: 15px;
+
+      .walk-img {
+        width: 100%;
+
+        img {
+          width: 100%;
+          height: auto;
+          border-radius: 10px;
+          margin-bottom: 4%;
+        }
+      }
+
+      h3 {
+        margin-bottom: 10px;
+      }
+
+      p {
+        margin-bottom: 26px;
+      }
+
+      .walk-text {
+        display: flex;
+        flex-direction: column;
+
+        .btn {
+          width: 100%;
+          .button(@ebony-clay, #fff, center);
+          padding: 20px;
+          font-size: 1.5rem;
+          font-weight: bolder;
+          border-radius: 5px;
+
+          &:hover {
+            .button(#fff, @ebony-clay, center);
+            transition: 0.2s ease-in-out;
+          }
+        }
+      }
+    }
+  }
+}
+
+// home
+@media (max-width: 500px) {
+  .home .walk {
+    display: none;
+  }
+}
